# fox-aleo

sdk/src/: function-key-provider.ts  index.ts  network-client.ts  program-manager.ts
wasm/: Cargo.toml
wasm/src/programs/: execution.rs
wasm/src/programs/manager/: execute.rs  transfer.rs
wasm/src/programs/proving_key/: mod.rs
wasm/src/programs/verifying_key/: mod.rs
wasm/src/types/: native.rs
wasm/tests/: offchain.rs
