[package]
name = "aleo-wasm"
version = "0.6.9"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "WebAssembly based toolkit for developing zero knowledge applications with Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/sdk"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]
doctest = false

[dependencies.snarkvm-circuit-network]
# version = "=0.16.12"
# 6d64025f3f775fa164d70d9a8177ec93c97cd36e
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-circuit-network"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"

[dependencies.snarkvm-console]
# version = "=0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-console"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"
features = [ "wasm" ]

[dependencies.snarkvm-ledger-block]
# version = "=0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-ledger-block"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"
features = [ "wasm" ]

[dependencies.snarkvm-ledger-query]
# version = "=0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-ledger-query"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"
features = [ "async", "wasm" ]

[dependencies.snarkvm-ledger-store]
# version = "=0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-ledger-store"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"

[dependencies.snarkvm-parameters]
# version = "=0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-parameters"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"
features = [ "wasm" ]

[dependencies.snarkvm-synthesizer]
# version = "=0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-synthesizer"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"
features = [ "async", "wasm" ]

[dependencies.snarkvm-wasm]
# version = "0.16.12"
git = "https://github.com/AleoNet/snarkVM"
package = "snarkvm-wasm"
rev = "6d64025f3f775fa164d70d9a8177ec93c97cd36e"
features = [ "console", "fields", "utilities" ]

[dependencies.anyhow]
version = "1.0"

[dependencies.async-trait]
version = "0.1.68"

[dependencies.console_error_panic_hook]
version = "0.1.7"

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dependencies.indexmap]
version = "2.0.0"

[dependencies.hex]
version = "0.4.3"

[dependencies.js-sys]
version = "0.3"

[dependencies.once_cell]
version = "1.18.0"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1.8"

[dependencies.reqwest]
version = "0.11.18"

[dependencies.serde]
version = "1.0.183"

[dependencies.serde_json]
version = "1.0"

[dependencies.sha2]
version = "0.10"
default-features = false

[build-dependencies.walkdir]
version = "2"

[dependencies.wasm-bindgen]
version = "0.2"
features = [ "serde-serialize" ]

[dependencies.wasm-bindgen-futures]
version = "0.4.37"

[dependencies.spmc]
version = "0.3.0"

[dependencies.futures]
version = "0.3.28"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Url",
    "Navigator",
    "Window",
]

[dev-dependencies.wasm-bindgen-test]
version = "0.3.37"

[features]
default = [ "serial", "browser" ]
serial = [ "snarkvm-console/serial", "snarkvm-synthesizer/serial", "snarkvm-ledger-query/serial", "snarkvm-ledger-block/serial", "snarkvm-ledger-store/serial" ]
browser = [ ]

## Profiles
[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
